mongoose version updated

--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2"
-  }
+  },
+ "engines": {
+  "node": ">=14 <15"
+ }
+
+
+
+
 }
