--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "config": "3.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -19,11 +20,7 @@
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2"
   },
- "engines": {
-  "node": ">=14 <15"
- }
-
-
-
-
+  "engines": {
+    "node": ">=14 <15"
+  }
 }
